--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.562.0",
+    "jszip": "^3.10.1",
     "multer": "^1.4.5-lts.1",
     "node-html-parser": "^6.1.13",
     "pdfkit": "^0.15.2",
